--- a/resources.html
+++ b/resources.html
@@ -46,29 +46,24 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="header-inner">
-            <a href="/" class="logo">
-                <div class="logo-icon"><span class="top-text">AG</span><span class="bot-text">SIST</span></div>
-                <div class="logo-text">AGSIST</div>
-            </a>
-            <button class="menu-toggle" onclick="document.querySelector('.nav').classList.toggle('open')">☰</button>
-            <nav class="nav">
-                <a href="/">DASHBOARD</a>
-                <a href="/calculator.html">GRAIN BIN</a>
-                <a href="/gdu.html">GDU CALC</a>
-                <a href="/breakeven.html">BREAK-EVEN</a>
-                <a href="/resources.html" class="active">RESOURCES</a>
-            </nav>
+    <nav style="background:#111;border-bottom:1px solid #222;padding:12px 16px;position:sticky;top:0;z-index:100">
+        <div style="max-width:1400px;margin:0 auto;display:flex;justify-content:space-between;align-items:center">
+            <a href="/" style="font-weight:700;font-size:1.25rem;color:#e6b042;text-decoration:none">AGSIST</a>
+            <div style="display:flex;gap:8px">
+                <a href="/tools.html" style="color:#666;text-decoration:none;padding:8px 12px;border-radius:4px;font-size:0.85rem">Tools</a>
+                <a href="/fastfacts.html" style="color:#666;text-decoration:none;padding:8px 12px;border-radius:4px;font-size:0.85rem">Fast Facts</a>
+                <a href="/learn.html" style="color:#666;text-decoration:none;padding:8px 12px;border-radius:4px;font-size:0.85rem">Learn</a>
+                <a href="/calendar.html" style="color:#666;text-decoration:none;padding:8px 12px;border-radius:4px;font-size:0.85rem">Calendar</a>
+                <a href="/resources.html" style="color:#e8e8e8;text-decoration:none;padding:8px 12px;border-radius:4px;font-size:0.85rem;background:#222">Resources</a>
+            </div>
         </div>
-    </header>
+    </nav>
 
     <main style="max-width:1400px;margin:0 auto;padding:20px">
-        <nav style="margin-bottom:20px;font-size:0.85rem;color:var(--dim)">
-            <a href="/" style="color:var(--accent);text-decoration:none">Home</a> → Resources
-        </nav>
-        
-        <h1 style="font-family:'Space Grotesk',sans-serif;font-size:1.8rem;margin-bottom:30px;color:var(--bright)">📚 AGRICULTURAL RESOURCES</h1>
+        <div style="margin-bottom:24px">
+            <h1 style="font-family:'JetBrains Mono',monospace;font-size:1.5rem;margin-bottom:8px">📚 Agricultural Resources</h1>
+            <p style="color:#666;font-size:0.9rem">Curated links, news feeds, and tools for farmers.</p>
+        </div>
 
         <!-- WEATHER & FORECASTS -->
         <h2 class="category-header">🌤️ WEATHER & FORECASTS</h2>
