--- a/404.html
+++ b/404.html
@@ -6,8 +6,14 @@
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-6KXCTD5Z9H');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#e6b042">
     <title>404 - Page Not Found | AGSIST</title>
+    <meta name="description" content="Page not found. Return to AGSIST for free agricultural commodity prices, news, weather, and farm tools.">
+    <meta name="robots" content="noindex">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <meta property="og:title" content="404 - Page Not Found | AGSIST">
+    <meta property="og:description" content="Page not found. Return to AGSIST for free agricultural tools.">
+    <meta property="og:image" content="https://agsist.com/og-image.png">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -74,9 +80,8 @@
     <p>The page you're looking for doesn't exist or has been moved.</p>
     <div class="links">
         <a href="/">Dashboard</a>
-        <a href="/calculator.html">Grain Bin Calc</a>
-        <a href="/gdu.html">GDU Calculator</a>
-        <a href="/breakeven.html">Break-Even</a>
+        <a href="/tools.html">Tools</a>
+        <a href="/learn.html">Learn</a>
     </div>
 </body>
 </html>
