--- a/calendar.html
+++ b/calendar.html
@@ -6,6 +6,7 @@
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-6KXCTD5Z9H');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#e6b042">
     <title>USDA Report Calendar & Crop Insurance Deadlines 2026 | AGSIST</title>
     <meta name="description" content="2026 USDA report calendar with WASDE, Crop Progress, Grain Stocks dates. Plus crop insurance deadlines for corn, soybeans, wheat. Never miss a deadline.">
     <meta name="keywords" content="USDA calendar, WASDE report dates, crop progress report, grain stocks report, crop insurance deadline, sales closing date, acreage reporting">
@@ -16,9 +17,26 @@
     <meta property="og:description" content="Never miss a USDA report or insurance deadline. Complete 2026 calendar for farmers.">
     <meta property="og:image" content="https://agsist.com/og-image.png">
     <meta property="og:url" content="https://agsist.com/calendar.html">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600;700&display=swap" rel="stylesheet">
+    
+    <!-- Schema.org markup -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "USDA Report Calendar & Crop Insurance Deadlines 2026",
+        "description": "Complete 2026 calendar of USDA reports and crop insurance deadlines for farmers",
+        "url": "https://agsist.com/calendar.html",
+        "publisher": {
+            "@type": "Organization",
+            "name": "AGSIST",
+            "url": "https://agsist.com"
+        }
+    }
+    </script>
     
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -241,7 +259,7 @@
                 <a href="/tools.html">Tools</a>
                 <a href="/fastfacts.html">Fast Facts</a>
                 <a href="/calendar.html" class="active">Calendar</a>
-                <a href="/resources.html">Resources</a>
+                <a href="/resources.html">Links</a>
             </div>
         </div>
     </nav>
