--- a/fastfacts.html
+++ b/fastfacts.html
@@ -6,6 +6,7 @@
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-6KXCTD5Z9H');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#e6b042">
     <title>Nutrient Management Fast Facts - Corn N Rates, Manure Credits, P&K Guidelines | AGSIST</title>
     <meta name="description" content="Digital UWEX-style nutrient management fast facts. Corn nitrogen calculator, legume N credits, manure nutrients, P&K recommendations, fertilizer analysis, and unit conversions. Free for farmers.">
     <meta name="keywords" content="corn nitrogen rate, UWEX fast facts, nutrient management, manure nutrients, legume nitrogen credit, fertilizer analysis, P2O5 K2O recommendations, wisconsin corn N rate">
@@ -206,7 +207,7 @@
                 <a href="/fastfacts.html" class="active">Fast Facts</a>
                 <a href="/learn.html">Learn</a>
                 <a href="/calendar.html">Calendar</a>
-                <a href="/resources.html">Resources</a>
+                <a href="/resources.html">Links</a>
             </div>
         </div>
     </nav>
