--- a/learn.html
+++ b/learn.html
@@ -6,6 +6,7 @@
     <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-6KXCTD5Z9H');</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#e6b042">
     <title>Farming Guides - Basis, Grain Marketing, Crop Insurance, GDUs | AGSIST</title>
     <meta name="description" content="Free farming guides: understanding corn basis, when to sell grain, crop insurance 101, GDU explained, and break-even analysis. Written for farmers by farmers.">
     <meta name="keywords" content="corn basis explained, when to sell grain, crop insurance guide, GDU growing degree units, farm break even analysis, grain marketing basics">
