--- a/corn-prices.html
+++ b/corn-prices.html
@@ -6,7 +6,7 @@
     <title>Live Corn Prices | AGSIST</title>
     <meta name="description" content="Real-time corn futures prices, local basis, and cash prices. Free tools for farmers.">
     <link rel="canonical" href="https://agsist.com/corn-prices.html">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -26,33 +26,34 @@
     <!-- NAVIGATION -->
     <nav class="main-nav">
         <div class="nav-inner">
-            <a href="/" class="logo">AGSIST</a>
+            <a href="index.html" class="logo">AGSIST</a>
+            <button class="menu-toggle" aria-label="Menu">☰</button>
             <div class="nav-links">
                 <div class="nav-dropdown">
                     <button class="nav-link dropdown-toggle">Prices ▾</button>
                     <div class="dropdown-menu">
-                        <a href="/corn-prices.html" class="dropdown-item active">Corn</a>
-                        <a href="/soybean-prices.html" class="dropdown-item">Soybeans</a>
-                        <a href="/wheat-prices.html" class="dropdown-item">Wheat</a>
+                        <a href="corn-prices.html" class="dropdown-item active">Corn</a>
+                        <a href="soybean-prices.html" class="dropdown-item">Soybeans</a>
+                        <a href="wheat-prices.html" class="dropdown-item">Wheat</a>
                     </div>
                 </div>
                 <div class="nav-dropdown">
                     <button class="nav-link dropdown-toggle">Tools ▾</button>
                     <div class="dropdown-menu">
-                        <a href="/tools.html" class="dropdown-item">All Tools</a>
-                        <a href="/breakeven.html" class="dropdown-item">Breakeven</a>
-                        <a href="/gdu.html" class="dropdown-item">GDU Calculator</a>
-                        <a href="/calculator.html" class="dropdown-item">Grain Bin</a>
-                        <a href="/fastfacts.html" class="dropdown-item">Fast Facts</a>
+                        <a href="tools.html" class="dropdown-item">All Tools</a>
+                        <a href="breakeven.html" class="dropdown-item">Breakeven</a>
+                        <a href="gdu.html" class="dropdown-item">GDU Calculator</a>
+                        <a href="calculator.html" class="dropdown-item">Grain Bin</a>
+                        <a href="fastfacts.html" class="dropdown-item">Fast Facts</a>
                     </div>
                 </div>
                 <div class="nav-dropdown">
                     <button class="nav-link dropdown-toggle">Info ▾</button>
                     <div class="dropdown-menu">
-                        <a href="/learn.html" class="dropdown-item">Learn</a>
-                        <a href="/calendar.html" class="dropdown-item">Calendar</a>
-                        <a href="/resources.html" class="dropdown-item">Resources</a>
-                        <a href="/offices.html" class="dropdown-item">Offices</a>
+                        <a href="learn.html" class="dropdown-item">Learn</a>
+                        <a href="calendar.html" class="dropdown-item">Calendar</a>
+                        <a href="resources.html" class="dropdown-item">Resources</a>
+                        <a href="offices.html" class="dropdown-item">Offices</a>
                     </div>
                 </div>
             </div>
@@ -63,20 +64,20 @@
     <!-- MOBILE MENU -->
     <div class="mobile-menu">
         <div class="mobile-section">Prices</div>
-        <a href="/corn-prices.html" class="mobile-link active">Corn Prices</a>
-        <a href="/soybean-prices.html" class="mobile-link">Soybean Prices</a>
-        <a href="/wheat-prices.html" class="mobile-link">Wheat Prices</a>
+        <a href="corn-prices.html" class="mobile-link active">Corn Prices</a>
+        <a href="soybean-prices.html" class="mobile-link">Soybean Prices</a>
+        <a href="wheat-prices.html" class="mobile-link">Wheat Prices</a>
         <div class="mobile-section">Tools</div>
-        <a href="/tools.html" class="mobile-link">All Tools</a>
-        <a href="/breakeven.html" class="mobile-link">Breakeven</a>
-        <a href="/gdu.html" class="mobile-link">GDU Calculator</a>
-        <a href="/calculator.html" class="mobile-link">Grain Bin</a>
-        <a href="/fastfacts.html" class="mobile-link">Fast Facts</a>
+        <a href="tools.html" class="mobile-link">All Tools</a>
+        <a href="breakeven.html" class="mobile-link">Breakeven</a>
+        <a href="gdu.html" class="mobile-link">GDU Calculator</a>
+        <a href="calculator.html" class="mobile-link">Grain Bin</a>
+        <a href="fastfacts.html" class="mobile-link">Fast Facts</a>
         <div class="mobile-section">Info</div>
-        <a href="/learn.html" class="mobile-link">Learn</a>
-        <a href="/calendar.html" class="mobile-link">Calendar</a>
-        <a href="/resources.html" class="mobile-link">Resources</a>
-        <a href="/offices.html" class="mobile-link">Offices</a>
+        <a href="learn.html" class="mobile-link">Learn</a>
+        <a href="calendar.html" class="mobile-link">Calendar</a>
+        <a href="resources.html" class="mobile-link">Resources</a>
+        <a href="offices.html" class="mobile-link">Offices</a>
     </div>
 
     <main class="page-content">
@@ -259,21 +260,21 @@
         <section class="tools-promo">
             <h2>Farm Tools</h2>
             <div class="tools-grid">
-                <a href="/breakeven.html" class="tool-link">
+                <a href="breakeven.html" class="tool-link">
                     <div class="tool-card">
                         <span class="tool-icon">💰</span>
                         <h3>Breakeven Calculator</h3>
                         <p>Calculate your cost per bushel</p>
                     </div>
                 </a>
-                <a href="/gdu.html" class="tool-link">
+                <a href="gdu.html" class="tool-link">
                     <div class="tool-card">
                         <span class="tool-icon">🌡️</span>
                         <h3>GDU Calculator</h3>
                         <p>Track growing degree units</p>
                     </div>
                 </a>
-                <a href="/calculator.html" class="tool-link">
+                <a href="calculator.html" class="tool-link">
                     <div class="tool-card">
                         <span class="tool-icon">🌾</span>
                         <h3>Grain Bin Calculator</h3>
@@ -291,28 +292,28 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h4>Prices</h4>
-                    <a href="/corn-prices.html">Corn</a>
-                    <a href="/soybean-prices.html">Soybeans</a>
-                    <a href="/wheat-prices.html">Wheat</a>
+                    <a href="corn-prices.html">Corn</a>
+                    <a href="soybean-prices.html">Soybeans</a>
+                    <a href="wheat-prices.html">Wheat</a>
                 </div>
                 <div class="footer-col">
                     <h4>Tools</h4>
-                    <a href="/tools.html">All Tools</a>
-                    <a href="/gdu.html">GDU Calculator</a>
-                    <a href="/breakeven.html">Breakeven</a>
-                    <a href="/calculator.html">Grain Bin</a>
+                    <a href="tools.html">All Tools</a>
+                    <a href="gdu.html">GDU Calculator</a>
+                    <a href="breakeven.html">Breakeven</a>
+                    <a href="calculator.html">Grain Bin</a>
                 </div>
                 <div class="footer-col">
                     <h4>Resources</h4>
-                    <a href="/fastfacts.html">Fast Facts</a>
-                    <a href="/learn.html">Learn</a>
-                    <a href="/calendar.html">Calendar</a>
-                    <a href="/resources.html">Links</a>
+                    <a href="fastfacts.html">Fast Facts</a>
+                    <a href="learn.html">Learn</a>
+                    <a href="calendar.html">Calendar</a>
+                    <a href="resources.html">Links</a>
                 </div>
                 <div class="footer-col">
                     <h4>Legal</h4>
-                    <a href="/privacy.html">Privacy</a>
-                    <a href="/terms.html">Terms</a>
+                    <a href="privacy.html">Privacy</a>
+                    <a href="terms.html">Terms</a>
                 </div>
             </div>
             <div class="footer-bottom">
@@ -383,6 +384,82 @@
         
         // Update every 30 seconds
         setInterval(updatePrices, 30000);
+    </script>
+    <footer>
+        <div class="footer-inner">
+            <div class="footer-col">
+                <h4>AGSIST</h4>
+                <p>Free live agricultural commodity prices, weather, and news for farmers.</p>
+                <p class="footer-tagline">Real-time data. No account required.</p>
+            </div>
+            <div class="footer-col">
+                <h4>Prices</h4>
+                <ul>
+                    <li><a href="corn-prices.html">Corn Prices</a></li>
+                    <li><a href="soybean-prices.html">Soybean Prices</a></li>
+                    <li><a href="wheat-prices.html">Wheat Prices</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Tools</h4>
+                <ul>
+                    <li><a href="tools.html">All Tools</a></li>
+                    <li><a href="gdu.html">GDU Calculator</a></li>
+                    <li><a href="breakeven.html">Break-Even Calculator</a></li>
+                    <li><a href="calculator.html">Grain Bin Calculator</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Resources</h4>
+                <ul>
+                    <li><a href="fastfacts.html">Fast Facts</a></li>
+                    <li><a href="learn.html">Learn</a></li>
+                    <li><a href="calendar.html">USDA Calendar</a></li>
+                    <li><a href="resources.html">Ag Links</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Our Network</h4>
+                <ul>
+                    <li><a href="https://farmers1st.com" target="_blank" rel="noopener">🌾 Farmers First Agri</a></li>
+                    <li><a href="https://lokedrone.com" target="_blank" rel="noopener">✈️ Loke Drone</a></li>
+                    <li><a href="https://usdronemap.com" target="_blank" rel="noopener">🗺️ US Drone Map</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <span>© 2026 AGSIST</span>
+            <div class="footer-legal">
+                <a href="privacy.html">Privacy</a>
+                <a href="terms.html">Terms</a>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+    document.querySelector('.menu-toggle')?.addEventListener('click', function() {
+        const nav = document.querySelector('.nav-links');
+        const isOpen = nav.classList.toggle('open');
+        this.textContent = isOpen ? '✕' : '☰';
+    });
+    document.querySelectorAll('.nav-dropdown-trigger').forEach(trigger => {
+        trigger.addEventListener('click', function(e) {
+            if (window.innerWidth <= 767) {
+                e.preventDefault();
+                this.closest('.nav-dropdown').classList.toggle('open');
+            }
+        });
+    });
+    document.addEventListener('click', function(e) {
+        if (!e.target.closest('nav')) {
+            document.querySelector('.nav-links')?.classList.remove('open');
+            const toggle = document.querySelector('.menu-toggle');
+            if (toggle) toggle.textContent = '☰';
+        }
+        if (!e.target.closest('.nav-dropdown')) {
+            document.querySelectorAll('.nav-dropdown.open').forEach(d => d.classList.remove('open'));
+        }
+    });
     </script>
 </body>
 </html>
