--- a/breakeven.html
+++ b/breakeven.html
@@ -18,24 +18,24 @@
 </head>
 <body>
     <!-- NAVIGATION -->
-        <nav>
+    <nav class="main-nav">
         <div class="nav-inner">
             <a href="index.html" class="logo">AGSIST</a>
-            <button class="menu-toggle" aria-label="Menu">☰</button>
+            <button class="mobile-menu-btn">☰</button>
             <div class="nav-links">
                 <div class="nav-dropdown">
-                    <a href="#" class="nav-dropdown-trigger">Prices <span class="dropdown-arrow">▾</span></a>
-                    <div class="nav-dropdown-content">
-                        <a href="corn-prices.html">🌽 Corn Prices</a>
-                        <a href="soybean-prices.html">🫘 Soybean Prices</a>
-                        <a href="wheat-prices.html">🌾 Wheat Prices</a>
+                    <button class="nav-link dropdown-toggle">Prices ▾</button>
+                    <div class="dropdown-menu">
+                        <a href="corn-prices.html" class="dropdown-item">🌽 Corn</a>
+                        <a href="soybean-prices.html" class="dropdown-item">🫘 Soybeans</a>
+                        <a href="wheat-prices.html" class="dropdown-item">🌾 Wheat</a>
                     </div>
                 </div>
-                <a href="tools.html">Tools</a>
-                <a href="fastfacts.html">Fast Facts</a>
-                <a href="learn.html">Learn</a>
-                <a href="calendar.html">Calendar</a>
-                <a href="resources.html">Links</a>
+                <a href="tools.html" class="nav-link">Tools</a>
+                <a href="fastfacts.html" class="nav-link">Fast Facts</a>
+                <a href="learn.html" class="nav-link">Learn</a>
+                <a href="calendar.html" class="nav-link">Calendar</a>
+                <a href="resources.html" class="nav-link">Links</a>
             </div>
         </div>
     </nav>
@@ -124,59 +124,6 @@
             <a href="https://farmers1st.com" target="_blank" rel="noopener" class="btn">Get Free Quote →</a>
         </div>
     </main>
-
-    <footer>
-        <div class="footer-inner">
-            <div class="footer-col">
-                <h4>AGSIST</h4>
-                <p>Free live agricultural commodity prices, weather, and news for farmers.</p>
-                <p class="footer-tagline">Real-time data. No account required.</p>
-            </div>
-            <div class="footer-col">
-                <h4>Prices</h4>
-                <ul>
-                    <li><a href="corn-prices.html">Corn Prices</a></li>
-                    <li><a href="soybean-prices.html">Soybean Prices</a></li>
-                    <li><a href="wheat-prices.html">Wheat Prices</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Tools</h4>
-                <ul>
-                    <li><a href="tools.html">All Tools</a></li>
-                    <li><a href="gdu.html">GDU Calculator</a></li>
-                    <li><a href="breakeven.html">Break-Even Calculator</a></li>
-                    <li><a href="calculator.html">Grain Bin Calculator</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Resources</h4>
-                <ul>
-                    <li><a href="fastfacts.html">Fast Facts</a></li>
-                    <li><a href="learn.html">Learn</a></li>
-                    <li><a href="calendar.html">USDA Calendar</a></li>
-                    <li><a href="resources.html">Ag Links</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Our Network</h4>
-                <ul>
-                    <li><a href="https://farmers1st.com" target="_blank" rel="noopener">🌾 Farmers First Agri</a></li>
-                    <li><a href="https://lokedrone.com" target="_blank" rel="noopener">✈️ Loke Drone</a></li>
-                    <li><a href="https://usdronemap.com" target="_blank" rel="noopener">🗺️ US Drone Map</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <span>© 2026 AGSIST</span>
-            <div class="footer-legal">
-                <a href="privacy.html">Privacy</a>
-                <a href="terms.html">Terms</a>
-            </div>
-        </div>
-    </footer>
-
-
 
     <footer class="main-footer">
         <div class="footer-inner">
@@ -270,28 +217,8 @@
 
     <script>
     // Mobile menu toggle
-    document.querySelector('.menu-toggle')?.addEventListener('click', function() {
-        const nav = document.querySelector('.nav-links');
-        const isOpen = nav.classList.toggle('open');
-        this.textContent = isOpen ? '✕' : '☰';
-    });
-    document.querySelectorAll('.nav-dropdown-trigger').forEach(trigger => {
-        trigger.addEventListener('click', function(e) {
-            if (window.innerWidth <= 767) {
-                e.preventDefault();
-                this.closest('.nav-dropdown').classList.toggle('open');
-            }
-        });
-    });
-    document.addEventListener('click', function(e) {
-        if (!e.target.closest('nav')) {
-            document.querySelector('.nav-links')?.classList.remove('open');
-            const toggle = document.querySelector('.menu-toggle');
-            if (toggle) toggle.textContent = '☰';
-        }
-        if (!e.target.closest('.nav-dropdown')) {
-            document.querySelectorAll('.nav-dropdown.open').forEach(d => d.classList.remove('open'));
-        }
+    document.querySelector('.mobile-menu-btn')?.addEventListener('click', function() {
+        document.querySelector('.mobile-menu').classList.toggle('active');
     });
     </script>
 </body>
