--- a/breakeven.html
+++ b/breakeven.html
@@ -125,39 +125,34 @@
         </div>
     </main>
 
-    <footer class="main-footer">
+        <footer class="site-footer">
         <div class="footer-inner">
-            <div class="footer-grid">
-                <div class="footer-col">
-                    <h4>Prices</h4>
+            <div class="footer-main">
+                <div class="footer-brand-row">
+                    <a href="index.html" class="footer-brand">AGSIST</a>
+                    <span class="footer-sep">|</span>
+                    <span class="footer-tagline">Free agricultural prices, tools & news</span>
+                </div>
+                <div class="footer-links">
                     <a href="corn-prices.html">Corn</a>
                     <a href="soybean-prices.html">Soybeans</a>
                     <a href="wheat-prices.html">Wheat</a>
-                </div>
-                <div class="footer-col">
-                    <h4>Tools</h4>
-                    <a href="tools.html">All Tools</a>
-                    <a href="breakeven.html">Breakeven</a>
-                    <a href="gdu.html">GDU Calculator</a>
-                    <a href="calculator.html">Grain Bin</a>
+                    <a href="tools.html">Tools</a>
                     <a href="fastfacts.html">Fast Facts</a>
-                </div>
-                <div class="footer-col">
-                    <h4>Info</h4>
-                    <a href="learn.html">Learn</a>
                     <a href="calendar.html">Calendar</a>
                     <a href="resources.html">Resources</a>
-                    <a href="offices.html">Offices</a>
                 </div>
-                <div class="footer-col">
-                    <h4>Legal</h4>
+                <div class="footer-legal">
+                    <span>© 2026 AGSIST</span>
                     <a href="privacy.html">Privacy</a>
                     <a href="terms.html">Terms</a>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>© 2026 AGSIST</p>
-                <p class="disclaimer">Prices delayed minimum 10 minutes. Not financial advice.</p>
+            <div class="footer-network">
+                <h4>Our Network</h4>
+                <a href="https://farmers1st.com" target="_blank">🌾 Farmers First Agri</a>
+                <a href="https://lokedrone.com" target="_blank">✈️ Loke Drone</a>
+                <a href="https://usdronemap.com" target="_blank">🗺️ US Drone Map</a>
             </div>
         </div>
     </footer>
