--- a/breakeven.html
+++ b/breakeven.html
@@ -18,10 +18,10 @@
 </head>
 <body>
     <!-- NAVIGATION -->
-    <nav class="main-nav">
+        <nav class="main-nav">
         <div class="nav-inner">
             <a href="index.html" class="logo">AGSIST</a>
-            <button class="mobile-menu-btn">☰</button>
+            <button class="mobile-menu-btn" aria-label="Menu">☰</button>
             <div class="nav-links">
                 <div class="nav-dropdown">
                     <button class="nav-link dropdown-toggle">Prices ▾</button>
@@ -125,7 +125,7 @@
         </div>
     </main>
 
-        <footer class="site-footer">
+            <footer class="site-footer">
         <div class="footer-inner">
             <div class="footer-main">
                 <div class="footer-brand-row">
