--- a/corn-prices.html
+++ b/corn-prices.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6KXCTD5Z9H"></script>
+    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-6KXCTD5Z9H');</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Corn Prices | AGSIST</title>
@@ -24,40 +28,25 @@
 </head>
 <body>
     <!-- NAVIGATION -->
-    <nav class="main-nav">
+        <nav class="main-nav">
         <div class="nav-inner">
             <a href="index.html" class="logo">AGSIST</a>
-            <button class="menu-toggle" aria-label="Menu">☰</button>
+            <button class="mobile-menu-btn" aria-label="Menu">☰</button>
             <div class="nav-links">
                 <div class="nav-dropdown">
                     <button class="nav-link dropdown-toggle">Prices ▾</button>
                     <div class="dropdown-menu">
-                        <a href="corn-prices.html" class="dropdown-item active">Corn</a>
-                        <a href="soybean-prices.html" class="dropdown-item">Soybeans</a>
-                        <a href="wheat-prices.html" class="dropdown-item">Wheat</a>
+                        <a href="corn-prices.html" class="dropdown-item">🌽 Corn</a>
+                        <a href="soybean-prices.html" class="dropdown-item">🫘 Soybeans</a>
+                        <a href="wheat-prices.html" class="dropdown-item">🌾 Wheat</a>
                     </div>
                 </div>
-                <div class="nav-dropdown">
-                    <button class="nav-link dropdown-toggle">Tools ▾</button>
-                    <div class="dropdown-menu">
-                        <a href="tools.html" class="dropdown-item">All Tools</a>
-                        <a href="breakeven.html" class="dropdown-item">Breakeven</a>
-                        <a href="gdu.html" class="dropdown-item">GDU Calculator</a>
-                        <a href="calculator.html" class="dropdown-item">Grain Bin</a>
-                        <a href="fastfacts.html" class="dropdown-item">Fast Facts</a>
-                    </div>
-                </div>
-                <div class="nav-dropdown">
-                    <button class="nav-link dropdown-toggle">Info ▾</button>
-                    <div class="dropdown-menu">
-                        <a href="learn.html" class="dropdown-item">Learn</a>
-                        <a href="calendar.html" class="dropdown-item">Calendar</a>
-                        <a href="resources.html" class="dropdown-item">Resources</a>
-                        <a href="offices.html" class="dropdown-item">Offices</a>
-                    </div>
-                </div>
+                <a href="tools.html" class="nav-link">Tools</a>
+                <a href="fastfacts.html" class="nav-link">Fast Facts</a>
+                <a href="learn.html" class="nav-link">Learn</a>
+                <a href="calendar.html" class="nav-link">Calendar</a>
+                <a href="resources.html" class="nav-link">Links</a>
             </div>
-            <button class="mobile-menu-btn" aria-label="Menu">☰</button>
         </div>
     </nav>
 
@@ -287,38 +276,34 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="main-footer">
+        <footer class="site-footer">
         <div class="footer-inner">
-            <div class="footer-grid">
-                <div class="footer-col">
-                    <h4>Prices</h4>
+            <div class="footer-main">
+                <div class="footer-brand-row">
+                    <a href="index.html" class="footer-brand">AGSIST</a>
+                    <span class="footer-sep">|</span>
+                    <span class="footer-tagline">Free agricultural prices, tools & news</span>
+                </div>
+                <div class="footer-links">
                     <a href="corn-prices.html">Corn</a>
                     <a href="soybean-prices.html">Soybeans</a>
                     <a href="wheat-prices.html">Wheat</a>
-                </div>
-                <div class="footer-col">
-                    <h4>Tools</h4>
-                    <a href="tools.html">All Tools</a>
-                    <a href="gdu.html">GDU Calculator</a>
-                    <a href="breakeven.html">Breakeven</a>
-                    <a href="calculator.html">Grain Bin</a>
-                </div>
-                <div class="footer-col">
-                    <h4>Resources</h4>
+                    <a href="tools.html">Tools</a>
                     <a href="fastfacts.html">Fast Facts</a>
-                    <a href="learn.html">Learn</a>
                     <a href="calendar.html">Calendar</a>
-                    <a href="resources.html">Links</a>
+                    <a href="resources.html">Resources</a>
                 </div>
-                <div class="footer-col">
-                    <h4>Legal</h4>
+                <div class="footer-legal">
+                    <span>© 2026 AGSIST</span>
                     <a href="privacy.html">Privacy</a>
                     <a href="terms.html">Terms</a>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>© 2026 AGSIST</p>
-                <p class="disclaimer">Prices delayed minimum 10 minutes. Not financial advice.</p>
+            <div class="footer-network">
+                <h4>Our Network</h4>
+                <a href="https://farmers1st.com" target="_blank">🌾 Farmers First Agri</a>
+                <a href="https://lokedrone.com" target="_blank">✈️ Loke Drone</a>
+                <a href="https://usdronemap.com" target="_blank">🗺️ US Drone Map</a>
             </div>
         </div>
     </footer>
