--- a/terms.html
+++ b/terms.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6KXCTD5Z9H"></script>
+    <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-6KXCTD5Z9H');</script>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Use | AGSIST</title>
@@ -116,14 +120,27 @@
             .nav-links { display: none; }
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <nav>
+        <nav class="main-nav">
         <div class="nav-inner">
-            <a href="/" class="logo">AGSIST</a>
+            <a href="index.html" class="logo">AGSIST</a>
+            <button class="mobile-menu-btn" aria-label="Menu">☰</button>
             <div class="nav-links">
-                <a href="/tools.html">Tools</a>
-                <a href="/resources.html">Resources</a>
+                <div class="nav-dropdown">
+                    <button class="nav-link dropdown-toggle">Prices ▾</button>
+                    <div class="dropdown-menu">
+                        <a href="corn-prices.html" class="dropdown-item">🌽 Corn</a>
+                        <a href="soybean-prices.html" class="dropdown-item">🫘 Soybeans</a>
+                        <a href="wheat-prices.html" class="dropdown-item">🌾 Wheat</a>
+                    </div>
+                </div>
+                <a href="tools.html" class="nav-link">Tools</a>
+                <a href="fastfacts.html" class="nav-link">Fast Facts</a>
+                <a href="learn.html" class="nav-link">Learn</a>
+                <a href="calendar.html" class="nav-link">Calendar</a>
+                <a href="resources.html" class="nav-link">Links</a>
             </div>
         </div>
     </nav>
@@ -188,53 +205,34 @@
         <p>Questions about these terms? Visit our <a href="/resources.html">Resources</a> page for contact information.</p>
     </main>
 
-        <footer>
+            <footer class="site-footer">
         <div class="footer-inner">
-            <div class="footer-col">
-                <h4>AGSIST</h4>
-                <p>Free live agricultural commodity prices, weather, and news for farmers.</p>
-                <p class="footer-tagline">Real-time data. No account required.</p>
+            <div class="footer-main">
+                <div class="footer-brand-row">
+                    <a href="index.html" class="footer-brand">AGSIST</a>
+                    <span class="footer-sep">|</span>
+                    <span class="footer-tagline">Free agricultural prices, tools & news</span>
+                </div>
+                <div class="footer-links">
+                    <a href="corn-prices.html">Corn</a>
+                    <a href="soybean-prices.html">Soybeans</a>
+                    <a href="wheat-prices.html">Wheat</a>
+                    <a href="tools.html">Tools</a>
+                    <a href="fastfacts.html">Fast Facts</a>
+                    <a href="calendar.html">Calendar</a>
+                    <a href="resources.html">Resources</a>
+                </div>
+                <div class="footer-legal">
+                    <span>© 2026 AGSIST</span>
+                    <a href="privacy.html">Privacy</a>
+                    <a href="terms.html">Terms</a>
+                </div>
             </div>
-            <div class="footer-col">
-                <h4>Prices</h4>
-                <ul>
-                    <li><a href="corn-prices.html">Corn Prices</a></li>
-                    <li><a href="soybean-prices.html">Soybean Prices</a></li>
-                    <li><a href="wheat-prices.html">Wheat Prices</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Tools</h4>
-                <ul>
-                    <li><a href="tools.html">All Tools</a></li>
-                    <li><a href="gdu.html">GDU Calculator</a></li>
-                    <li><a href="breakeven.html">Break-Even Calculator</a></li>
-                    <li><a href="calculator.html">Grain Bin Calculator</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
-                <h4>Resources</h4>
-                <ul>
-                    <li><a href="fastfacts.html">Fast Facts</a></li>
-                    <li><a href="learn.html">Learn</a></li>
-                    <li><a href="calendar.html">USDA Calendar</a></li>
-                    <li><a href="resources.html">Ag Links</a></li>
-                </ul>
-            </div>
-            <div class="footer-col">
+            <div class="footer-network">
                 <h4>Our Network</h4>
-                <ul>
-                    <li><a href="https://farmers1st.com" target="_blank" rel="noopener">🌾 Farmers First Agri</a></li>
-                    <li><a href="https://lokedrone.com" target="_blank" rel="noopener">✈️ Loke Drone</a></li>
-                    <li><a href="https://usdronemap.com" target="_blank" rel="noopener">🗺️ US Drone Map</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <span>© 2026 AGSIST</span>
-            <div class="footer-legal">
-                <a href="privacy.html">Privacy</a>
-                <a href="terms.html">Terms</a>
+                <a href="https://farmers1st.com" target="_blank">🌾 Farmers First Agri</a>
+                <a href="https://lokedrone.com" target="_blank">✈️ Loke Drone</a>
+                <a href="https://usdronemap.com" target="_blank">🗺️ US Drone Map</a>
             </div>
         </div>
     </footer>
@@ -262,6 +260,21 @@
         if (!e.target.closest('.nav-dropdown')) {
             document.querySelectorAll('.nav-dropdown.open').forEach(d => d.classList.remove('open'));
         }
+    });
+    </script>
+    <script>
+    document.querySelector('.mobile-menu-btn')?.addEventListener('click', function() {
+        const nav = document.querySelector('.nav-links');
+        const isOpen = nav.classList.toggle('open');
+        this.textContent = isOpen ? '✕' : '☰';
+    });
+    document.querySelectorAll('.nav-link.dropdown-toggle').forEach(btn => {
+        btn.addEventListener('click', function(e) {
+            if (window.innerWidth <= 767) {
+                e.preventDefault();
+                this.closest('.nav-dropdown').classList.toggle('open');
+            }
+        });
     });
     </script>
 </body>
