--- a/news.html
+++ b/news.html
@@ -671,13 +671,13 @@
         <div class="accounts-section">
             <h3>📋 Accounts We Follow</h3>
             <div class="accounts-grid">
-                <a href="https://x.com/RichNelson_Alln" target="_blank" class="account-item">
+                <a href="https://x.com/RichNelsonMkts" target="_blank" class="account-item">
                     <span class="tag grain">grain</span>
-                    @RichNelson_Alln
+                    @RichNelsonMkts
                 </a>
-                <a href="https://x.com/texzona" target="_blank" class="account-item">
+                <a href="https://x.com/TheTedSpread" target="_blank" class="account-item">
                     <span class="tag grain">grain</span>
-                    @texzona
+                    @TheTedSpread
                 </a>
                 <a href="https://x.com/ScottSeifert1" target="_blank" class="account-item">
                     <span class="tag grain">grain</span>
@@ -707,13 +707,17 @@
                     <span class="tag weather">weather</span>
                     @RyanHallYall
                 </a>
-                <a href="https://x.com/kannbwx" target="_blank" class="account-item">
+                <a href="https://x.com/snodgrss" target="_blank" class="account-item">
                     <span class="tag weather">weather</span>
-                    @kannbwx
+                    @snodgrss
                 </a>
                 <a href="https://x.com/DroughtMonitor" target="_blank" class="account-item">
                     <span class="tag weather">weather</span>
                     @DroughtMonitor
+                </a>
+                <a href="https://x.com/ABORNINABARN" target="_blank" class="account-item">
+                    <span class="tag weather">weather</span>
+                    @ABORNINABARN
                 </a>
                 <a href="https://x.com/RoachAg" target="_blank" class="account-item">
                     <span class="tag farm">farm</span>
@@ -773,8 +777,8 @@
     // ═══════════════════════════════════════════════════════════════════════
     
     const ACCOUNTS = [
-        { handle: 'RichNelson_Alln', name: 'Rich Nelson', tag: 'grain' },
-        { handle: 'texzona', name: 'Ted Seifried', tag: 'grain' },
+        { handle: 'RichNelsonMkts', name: 'Rich Nelson', tag: 'grain' },
+        { handle: 'TheTedSpread', name: 'Ted Seifried', tag: 'grain' },
         { handle: 'ScottSeifert1', name: 'Scott Seifert', tag: 'grain' },
         { handle: 'MGrayGrain', name: 'Mike Gray', tag: 'grain' },
         { handle: 'ChrisHydeGrain', name: 'Chris Hyde', tag: 'grain' },
@@ -782,7 +786,7 @@
         { handle: 'GrainStats', name: 'Grain Stats', tag: 'grain' },
         { handle: 'RampCapitalLLC', name: 'Ramp Capital', tag: 'markets' },
         { handle: 'RyanHallYall', name: "Ryan Hall Y'all", tag: 'weather' },
-        { handle: 'kannbwx', name: 'Eric Snodgrass', tag: 'weather' },
+        { handle: 'snodgrss', name: 'Eric Snodgrass', tag: 'weather' },
         { handle: 'DroughtMonitor', name: 'Drought Monitor', tag: 'weather' },
         { handle: 'ABORNINABARN', name: 'AG Weather', tag: 'weather' },
         { handle: 'RoachAg', name: 'Tim Roach', tag: 'farm' },
