--- a/corn-prices.html
+++ b/corn-prices.html
@@ -272,7 +272,7 @@
                         <div class="link-grid">
                             <a href="https://www.eia.gov/petroleum/ethanolcapacity/" target="_blank" class="link-item external"><span>🏭 Ethanol Production (EIA)</span><span>Weekly</span></a>
                             <a href="https://www.eia.gov/dnav/pet/pet_pnp_wprode_s1_w.htm" target="_blank" class="link-item external"><span>📊 Weekly Ethanol Stats</span><span>EIA</span></a>
-                            <a href="https://www.barchart.com/futures/quotes/ZK*0" target="_blank" class="link-item external"><span>📈 Ethanol Futures (ZK)</span><span>Barchart</span></a>
+                            <a href="https://www.cmegroup.com/markets/energy/biofuels/denatured-fuel-ethanol.html" target="_blank" class="link-item external"><span>📈 Ethanol Futures (CME)</span><span>CME Group</span></a>
                             <a href="https://www.barchart.com/futures/quotes/RB*0" target="_blank" class="link-item external"><span>⛽ RBOB Gasoline</span><span>Barchart</span></a>
                             <a href="https://ethanolrfa.org/markets-and-statistics/annual-ethanol-production" target="_blank" class="link-item external"><span>📚 RFA Statistics</span><span>Annual data</span></a>
                             <a href="https://grains.org/ethanol-2/ethanol-market-and-pricing-data/" target="_blank" class="link-item external"><span>💵 Ethanol Margins</span><span>USGC</span></a>
@@ -336,7 +336,7 @@
                         </div>
                         <div class="link-grid" style="margin-top:12px">
                             <a href="https://ipad.fas.usda.gov/cropexplorer/cropview/commodityView.aspx?cropid=0440000&sel_year=2024&rankby=Production" target="_blank" class="link-item external"><span>🌽 Global Corn Production</span><span>FAS</span></a>
-                            <a href="https://www.abiove.org.br/en/statistics/" target="_blank" class="link-item external"><span>🇧🇷 ABIOVE Statistics</span><span>Brazil</span></a>
+                            <a href="https://ipad.fas.usda.gov/cropexplorer/cropview/commodityView.aspx?cropid=0440000" target="_blank" class="link-item external"><span>🌍 FAS Corn Explorer</span><span>Global</span></a>
                         </div>
                     </div>
                 </div>
