--- a/milk-prices.html
+++ b/milk-prices.html
@@ -214,7 +214,7 @@
                         <div class="link-grid">
                             <a href="/corn-prices.html" class="link-item"><span>🌽 Corn Dashboard</span><span>Energy</span></a>
                             <a href="https://www.barchart.com/futures/quotes/ZM*0" target="_blank" class="link-item external"><span>🥜 Soybean Meal (ZM)</span><span>Protein</span></a>
-                            <a href="https://www.barchart.com/futures/quotes/AF*0" target="_blank" class="link-item external"><span>🌿 Alfalfa Hay</span><span>Forage</span></a>
+                            <a href="https://www.ams.usda.gov/mnreports/ams_1919.pdf" target="_blank" class="link-item external"><span>🌿 National Hay Summary</span><span>USDA Weekly</span></a>
                             <a href="https://www.ams.usda.gov/market-news/hay" target="_blank" class="link-item external"><span>📊 USDA Hay Prices</span><span>Weekly</span></a>
                         </div>
                     </div>
