--- a/soybean-prices.html
+++ b/soybean-prices.html
@@ -241,7 +241,7 @@
                             </div>
                         </div>
                         <div class="link-grid">
-                            <a href="http://english.customs.gov.cn/" target="_blank" class="link-item external"><span>🇨🇳 China Customs Data</span><span>Imports</span></a>
+                            <a href="https://english.customs.gov.cn/" target="_blank" class="link-item external"><span>🇨🇳 China Customs Data</span><span>Imports</span></a>
                             <a href="https://apps.fas.usda.gov/psdonline/app/index.html#/app/advQuery" target="_blank" class="link-item external"><span>📊 PSD Online</span><span>USDA Data</span></a>
                             <a href="https://www.reuters.com/markets/commodities/grains/" target="_blank" class="link-item external"><span>📰 Reuters Grains</span><span>China news</span></a>
                         </div>
@@ -445,7 +445,7 @@
                             <a href="/wheat-prices.html" class="link-item"><span>🌾 Wheat Dashboard</span><span>AGSIST</span></a>
                             <a href="https://www.barchart.com/futures/quotes/ZM*0" target="_blank" class="link-item external"><span>🥜 Soybean Meal (ZM)</span><span>Feed</span></a>
                             <a href="https://www.barchart.com/futures/quotes/ZL*0" target="_blank" class="link-item external"><span>🛢️ Soybean Oil (ZL)</span><span>Biofuel</span></a>
-                            <a href="https://www.barchart.com/futures/quotes/ZR*0" target="_blank" class="link-item external"><span>🌴 Palm Oil</span><span>Competitor</span></a>
+                            <a href="https://www.investing.com/commodities/crude-palm-oil" target="_blank" class="link-item external"><span>🌴 Palm Oil (FCPO)</span><span>Competitor</span></a>
                             <a href="https://www.barchart.com/futures/quotes/DX*0" target="_blank" class="link-item external"><span>💵 US Dollar Index</span><span>Export factor</span></a>
                         </div>
                     </div>
