--- a/404.html
+++ b/404.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found | AGSIST</title>
-    <meta name="description" content="Page not found. Return to AGSIST for free agricultural prices, tools and news.">
+    <meta name="keywords" content="AGSIST, agriculture dashboard, page not found">
+    <meta name="description" content="The page you requested could not be found. Return to the AGSIST agricultural dashboard.">
     
     <link rel="icon" href="/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
