--- a/milk-prices.html
+++ b/milk-prices.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Milk Prices & Dairy Dashboard - Class III, Cheese, Butter, DMC | AGSIST</title>
-    <meta name="description" content="Complete dairy market dashboard. Class III & IV milk futures, cheese, butter, whey prices, USDA dairy reports, DMC margins, feed costs, and Global Dairy Trade auction results. Built for dairy farmers.">
+    <title>Milk & Dairy Prices - Class III, Cheese | AGSIST</title>
+    <meta name="description" content="Live dairy futures with Class III milk, cheese, butter charts and seasonal analysis.">
     <meta name="keywords" content="milk prices, Class III milk, Class IV milk, cheese futures, butter prices, dairy futures, DMC dairy margin, milk futures, whey prices, nonfat dry milk">
     <link rel="canonical" href="https://agsist.com/milk-prices.html">
     <link rel="icon" href="/favicon.png">
@@ -48,12 +48,12 @@
         .price-source:hover{border-color:var(--accent);transform:translateY(-2px)}
         .price-source-icon{font-size:1.3rem;margin-bottom:6px}
         .price-source-name{font-weight:600;font-size:0.8rem}
-        .price-source-desc{font-size:0.65rem;color:var(--dim);margin-top:2px}
+        .price-source-desc{font-size:0.75rem;color:var(--dim);margin-top:2px}
         .data-grid{display:grid;grid-template-columns:repeat(2,1fr);gap:6px}
         .data-card{background:var(--bg);border-radius:6px;padding:10px;text-align:center}
-        .data-card-label{font-size:0.6rem;color:var(--dim);text-transform:uppercase;letter-spacing:0.5px}
+        .data-card-label{font-size:0.7rem;color:var(--dim);text-transform:uppercase;letter-spacing:0.5px}
         .data-card-value{font-size:1rem;font-weight:700;color:var(--text);margin-top:2px}
-        .data-card-sub{font-size:0.6rem;color:var(--dim);margin-top:2px}
+        .data-card-sub{font-size:0.7rem;color:var(--dim);margin-top:2px}
         .link-grid{display:grid;gap:6px}
         .link-item{display:flex;justify-content:space-between;align-items:center;padding:10px 12px;background:var(--bg);border-radius:6px;text-decoration:none;color:var(--text);font-size:0.8rem;transition:background 0.2s}
         .link-item:hover{background:var(--card-hover,#1c1c22)}
@@ -70,7 +70,7 @@
         .product-card h4{font-size:0.8rem;color:var(--text);margin:0 0 6px 0}
         .product-card p{font-size:0.7rem;color:var(--dim);margin:0 0 8px 0;line-height:1.5}
         .product-card a{font-size:0.7rem;color:var(--accent)}
-        .dash-footer{font-size:0.65rem;color:var(--dim);text-align:center;padding:16px;background:var(--card);border-radius:8px;margin-top:12px;line-height:1.6}
+        .dash-footer{font-size:0.75rem;color:var(--dim);text-align:center;padding:16px;background:var(--card);border-radius:8px;margin-top:12px;line-height:1.6}
         .dash-footer a{color:var(--accent)}
         @media(min-width:480px){.price-sources{grid-template-columns:repeat(3,1fr)}.data-grid{grid-template-columns:repeat(3,1fr)}}
         @media(min-width:768px){.dash-wrap{padding:12px}.dash-grid{grid-template-columns:repeat(2,1fr)}.dash-grid .full-width{grid-column:1/-1}.info-grid{grid-template-columns:repeat(2,1fr)}.product-grid{grid-template-columns:repeat(2,1fr)}.data-grid{grid-template-columns:repeat(6,1fr)}}
