--- a/privacy.html
+++ b/privacy.html
@@ -6,6 +6,7 @@
     
     <!-- SEO -->
     <title>Privacy Policy | AGSIST</title>
+    <meta name="keywords" content="AGSIST privacy policy, data privacy, agriculture dashboard privacy">
     <meta name="description" content="AGSIST privacy policy. How we collect, use, and protect your information.">
     <link rel="canonical" href="https://agsist.com/privacy.html">
     
@@ -91,6 +92,19 @@
             }
         }
     </style>
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Privacy Policy",
+        "description": "AGSIST privacy policy",
+        "url": "https://agsist.com/privacy.html",
+        "applicationCategory": "Agriculture",
+        "operatingSystem": "Web Browser",
+        "offers": {"@type": "Offer", "price": "0", "priceCurrency": "USD"}
+    }
+    </script>
 </head>
 <body>
     <!-- Header -->
