--- a/terms.html
+++ b/terms.html
@@ -6,6 +6,7 @@
     
     <!-- SEO -->
     <title>Terms of Use | AGSIST</title>
+    <meta name="keywords" content="AGSIST terms of service, terms and conditions, agriculture dashboard terms">
     <meta name="description" content="AGSIST terms of use. Guidelines for using our agricultural tools and market data.">
     <link rel="canonical" href="https://agsist.com/terms.html">
     
@@ -107,6 +108,19 @@
             }
         }
     </style>
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Terms of Service",
+        "description": "AGSIST terms of service",
+        "url": "https://agsist.com/terms.html",
+        "applicationCategory": "Agriculture",
+        "operatingSystem": "Web Browser",
+        "offers": {"@type": "Offer", "price": "0", "priceCurrency": "USD"}
+    }
+    </script>
 </head>
 <body>
     <!-- Header -->
