--- a/learn.html
+++ b/learn.html
@@ -71,6 +71,9 @@
             .learn-container { padding: 12px; }
             .chapter-body { padding: 16px; }
             .stats-grid { grid-template-columns: repeat(2, 1fr); }
+            .chapter-body { overflow-x: auto; -webkit-overflow-scrolling: touch; }
+            .data-table { font-size: 0.8rem; min-width: 400px; }
+            .data-table th, .data-table td { padding: 8px; }
         }
     </style>
 
